--- a/src/pages/CPGG/CPGG.module.css
+++ b/src/pages/CPGG/CPGG.module.css
@@ -24,7 +24,8 @@
   margin-top: 0;
   margin-left: calc(50% - 445px);
   padding-left: 0;
-  padding-bottom: 15px;
+  padding-bottom: 0;
+  margin-bottom: 20px !important;
   white-space: nowrap;
   font-weight: bold;
 }
@@ -41,7 +42,7 @@
   height: 60vh;
   margin: 0 auto;
   margin-left: calc(50% - 400px - 250px - 140px);
-  margin-top: 2rem;
+  margin-top: 20px !important;
   padding: 20px;
   border-radius: 20px;
   gap: 5px;
