--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -16,7 +16,7 @@
 
 .title {
   text-align: left;
-  margin-bottom: 2rem;
+  margin-bottom: 20px !important;
   margin-top: 0;
   margin-left: calc(50% - 445px);
   font-size: 28px;
@@ -30,6 +30,7 @@
   gap: 2rem;
   justify-content: center;
   margin: 0 auto;
+  margin-top: 20px !important;
   margin-bottom: 4rem;
   position: relative;
 }
