--- a/src/pages/Researchers/Researchers.module.css
+++ b/src/pages/Researchers/Researchers.module.css
@@ -34,7 +34,7 @@
   font-size: 28px;
   font-weight: 700;
   color: hsl(0 0% 100%);
-  margin: 0 0 2.375rem 0;
+  margin: 0 0 20px 0 !important;
   margin-left: calc(50% - 445px);
   text-align: left;
   letter-spacing: 0.5px;
@@ -47,6 +47,7 @@
   grid-template-columns: repeat(5, 1fr);
   gap: 2rem;
   width: 100%;
+  margin-top: 20px !important;
   animation: slideUp 0.6s ease-out;
   transform: translateY(-10px);
 }
