--- a/src/pages/Spaces/Spaces.module.css
+++ b/src/pages/Spaces/Spaces.module.css
@@ -23,7 +23,7 @@
 
 .title {
   text-align: left;
-  margin-bottom: 2rem;
+  margin-bottom: 20px !important;
   margin-top: 0;
   margin-left: calc(50% - 445px);
   font-size: 28px;
@@ -38,6 +38,7 @@
   gap: 1.5rem;
   justify-content: center;
   margin: 0 auto;
+  margin-top: 20px !important;
   padding: 0 2rem;
   overflow: hidden;
   max-height: calc(100vh - 250px);
